# vectorshell

./: .gitignore  .gitleaks.toml  AGENT.md  CLAUDE.md  Cargo.toml  DEV-DOC.md  Dockerfile  Makefile  README.md  README_zh.md  SOUL.md  TASKS.md  config.example.toml  go.mod  go.sum
.github/workflows/: release.yml
api-docs/: README.md  frontend-react-pseudocode.md  sse-event-schema.json
client/: Cargo.toml
client/src/: executor.rs  main.rs
client/src/embedded_config/: mod.rs
client/src/websocket/: mod.rs
cmd/client/: main.go
cmd/repl/: main.go
cmd/server/: main.go
config/: SOUL.example.md  config.example.toml
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx
docs/: DEV-DOC.md
docs/api/: sse-event-schema.json
docs/plans/: 2026-03-28-vectorshell-operations.md
docs/specs/: 2026-03-28-vectorshell-operations-design.md
docs/superpowers/plans/: 2026-03-28-vectorshell-operations.md
internal/agent/: service.go
internal/api/: server.go
internal/client/: executor.go  websocket.go
internal/config/: config.go
internal/embedded/: config.go
internal/events/: bus.go
internal/mcp/: protocol.go  tools.go
internal/protocol/: protocol.go
internal/repl/: repl.go
internal/session/: manager.go
internal/skills/: skills.go
internal/store/: sqlite.go
internal/tunnel/: conn.go  dialer.go  listener.go
server/: Cargo.toml
server/src/: main.rs  ui.rs
server/src/agent/: exec_tool.rs  file_tools.rs  mod.rs  windows_tools.rs
server/src/api/: mod.rs
server/src/builder/: mod.rs
server/src/client_manager/: mod.rs
server/src/config/: mod.rs
server/src/db/: mod.rs
server/src/event_bus/: mod.rs
server/src/mcp/: mod.rs  protocol.rs  session.rs  tools.rs
server/src/tui/: app.rs  input.rs  mod.rs  render.rs  theme.rs
server/src/websocket/: mod.rs
shared/src/: protocol.rs
skill/vectorshell/: SKILL.md
skill/vectorshell/references/: api-endpoints.md  sse-events.md
webapp/: package-lock.json  package.json
webapp/src/: App.css  App.tsx
