[package]
name = "vectorshell-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-util = "0.3"
rig-core = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
