[package]
name = "vectorshell-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-util = "0.3"
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rig-core = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tower-http = { version = "0.6", features = ["fs"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
